--- a/project2/settings.gradle
+++ b/project2/settings.gradle
@@ -1,9 +1,1 @@
-boolean substituteDependency = hasProperty('substituteDependency')
-
-includeBuild('../project1') {
-    if (substituteDependency) {
-        dependencySubstitution {
-            substitute module('com.example:project-1') with project(':')
-        }
-    }
-}
+includeBuild('../project1')
